<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">BACK YARD</string>
    <string name="login">Login</string>
    <string name="app_id">832601126864557</string>
    <string name="google_maps_key">AIzaSyBq9-M35AEnxI4lMyfMOZVhwe2gm11n9Ao</string>
    <string name="cannot_connect_server">Cannot connect to server</string>
    <string name="error">Something went wrong!</string>
    <string name="internet">Internet connection not available!</string>
    <string name="success">200</string>
    <string name="invalid_access_token">420</string>
    <string name="treminate_account">405</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="enter_password">Please enter password</string>
    <string name="error_password">Password must have minimum 8 characters</string>
    <string name="cancel_message">By cancelling your overall ratings will be reduced, and this will affect your future bookings. Do you want to proceed?</string>
    <string name="start_sharing_your_tuls">Start Sharing Your BACK YARD</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="error_code">Please enter country code.</string>
    <string name="by_signing_up_i_agree_to_the_terms_amp_conditions"><![CDATA[By signing up i agree to the Terms & Conditions]]></string>
    <string name="reset_password_hint">Please enter your registered email Id in order to get a reset link. You will able to set a new password from there.</string>
    <string name="reset">RESET</string>
    <string name="full_name">Full Name</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="error_name">Please enter valid name with minimum 2 characters.</string>
    <string name="error_first_name">Please enter First Name with minimum 2 characters.</string>
    <string name="error_last_name">Please enter Last Name with minimum 2 characters.</string>
    <string name="error_pic">Please add your profile picture.</string>
    <string name="enter_phone">Please enter phone number</string>
    <string name="enter_valid_number">Please enter a valid phone number</string>
    <string name="verfication_hint_msg">Enter your verification code we sent to</string>
    <string name="call">CALL</string>
    <string name="done">DONE</string>
    <string name="select_category">Select Category</string>
    <string name="lender_side">HOST SIDE</string>
    <string name="user_side">User Side</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="security_charges">SECURITY DEPOSIT (REFUNDABLE)</string>
    <string name="convenience_fee">EXTRA FEE</string>
    <string name="error_country_code">Please select country code</string>
    <string name="error_currency">Please select currency</string>
    <string name="error_account">Please enter Account no.</string>
    <string name="error_sort_code">Please enter sort code</string>
    <string name="error_city">Please enter city</string>
    <string name="error_state">Please enter state</string>
    <string name="error_postal_code">Please enter Postal Code</string>
    <string name="error_dob">Please specify your DOB</string>
    <string name="error_document">Please add a document for verification</string>
    <string name="share_content">Check out BACK YARD App for your smartphone, this app cuts out time wasters. Download it today from yourbackyardapp.com</string>
    <string name="lorem_ipsum_dolor">Lorem Ipsum Dolor</string>
    <string name="lorem_ipsum_desc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="looking_for_a_tul">Looking For </string>
    <string name="become_a_host">Become a Host</string>
    <string name="verify">Verify</string>
    <string name="book_and_rent_places_for_events_in_a_matter_of_seconds_now">Book and rent places for events in a matter of seconds now.</string>
    <string name="where_are_you">Where Are You?</string>
    <string name="location_msg">Your location services need to be turned on in order for this to work.</string>
    <string name="enter_rule">Enter Rule</string>
    <string name="cancel">CANCEL</string>
    <string name="listed_tuls">Listed Places</string>
    <string name="my_short_list">My Favourites</string>
    <string name="add">ADD</string>
    <string name="add_additional_prices">Add Aditional Prices</string>
    <string name="edit_additional_prices">Edit Aditional Prices</string>
    <string name="list_places">List Your Place</string>
    <string name="title">TITLE</string>
    <string name="category">Category</string>
    <string name="description">DESCRIPTION</string>
    <string name="error_start_time">Please enter Check In time</string>
    <string name="error_end_time">Please enter Check Out time</string>
    <string name="error_hrs_start_time">Please enter Start Time For Hours</string>
    <string name="error_hrs_end_time">Please enter End Time For Hours</string>
    <string name="no_of_tul_available">NO. OF TUL AVAILABLE</string>
    <string name="price">PRICE</string>
    <string name="additional_prices">Additional Prices</string>
    <string name="address">Address</string>
    <string name="rules">Rules</string>
    <string name="add_images_video">Add Images/Video</string>
    <string name="no_location_found">No Location Found</string>
    <string name="searching">Searching...</string>
    <string name="search">Search</string>
    <string name="set_location_on_map">SET  LOCATION ON MAP</string>
    <string name="fetching_current_location">Fetching Current Location</string>
    <string name="add_your_first_tul">Add Your First Place</string>
    <string name="update">UPDATE</string>
    <string name="delete_message">Are you sure you want to delete image or video?</string>
    <string name="confrim">Confirm </string>
    <string name="add_rules">ADD RULES</string>
    <string name="edit_rules">EDIT RULES</string>
    <string name="reviews_and_ratings">REVIEWS &amp; RATINGS</string>
    <string name="cancellation_policies">CANCELLATION POLICY</string>
    <string name="prefrences">PREFERENCES</string>
    <string name="linked_account">LINKED ACCOUNT</string>
    <string name="add_photo">Add Image</string>
    <string name="capture_video">Add Video</string>
    <string name="error_image_count">You cannot upload more than 6 Images</string>
    <string name="error_video_count">You cannot upload more than 1 Video</string>
    <string name="weekdays">Weekdays</string>
    <string name="only_weekends">Only Weekends</string>
    <string name="both">Both</string>
    <string name="pause_message">Pause booking will disable further booking by the users. Are you sure you want to pause booking?</string>
    <string name="resume_message">Resume booking will enable further booking by the users. Are you sure you want to resume booking?</string>
    <string name="last_name_profile">LAST NAME</string>
    <string name="error_image_video_count">You cannot upload more than 7 Images/Videos</string>
    <string name="save_amp_next"><![CDATA[Save & Next]]></string>
    <string name="discard_message">Are you sure you want to discard? Your Preferences data,discount days and discount percentage will be reset.</string>
    <string name="discard_days_message">Are you sure you want to discard?</string>
    <string name="discard_discount">You have changed your start time so, your discount detail has been reset.</string>
    <string name="error_title">Please enter title</string>
    <string name="error_category">Please select category</string>
    <string name="error_descrption">Please enter description</string>
    <string name="error_no_tuls">Please enter no. of tuls</string>
    <string name="error_no_valid">Please enter a valid quantity</string>
    <string name="error_price">Please enter a valid price</string>
    <string name="error_valid_price">Please enter  a valid price</string>
    <string name="error_max_price">You can set max charges upto 999 only</string>
    <string name="error_addtional_prices">Please enter additional prices</string>
    <string name="error_max_fee">You can set extra fee upto 999 only</string>
    <string name="extra_fee_error">Please add valid extra fee </string>
    <string name="error_max_security_price">You can set security deposit upto 900000 only</string>
    <string name="error_address">Please enter address</string>
    <string name="error_rules">Please enter rules</string>
    <string name="error_image_video">Please add at least add one image/video</string>
    <string name="security_fee_error">Please add security fee</string>
    <string name="error_valid_fee">Please enter a valid fee</string>
    <string name="transition">transition</string>
    <string name="payment_exceed_code">423</string>
    <string name="remove_account">Are you sure you want to remove this account?</string>
    <string name="primary_account">Would you like to make this account primary?</string>
    <string name="payment">PAYMENTS</string>
    <string name="saved_cards">SAVED CARDS</string>
    <string name="accounts">ACCOUNTS</string>
    <string name="name_on_card">NAME ON CARD</string>
    <string name="card_no">CARD NUMBER</string>
    <string name="expiry_month">EXPIRY MONTH</string>
    <string name="expiry_year">EXPIRY YEAR</string>
    <string name="add_debit_credit_card">ADD DEBIT / CREDIT CARD</string>
    <string name="error_card_no">Enter card number</string>
    <string name="error_valid_card_no">Enter valid card number</string>
    <string name="error_month">Enter expiry month</string>
    <string name="error_year">Enter expiry year</string>
    <string name="error_valid_account">Enter valid account number</string>
    <string name="contact">Contact</string>
    <string name="Login_First">Only registered users can proceed further.
        Sign up with the app and explore the app. Do you want to Sign up?</string>
    <string name="contact_admin_tul">Your account is suspended by the Admin. You can contact the admin at <u>info@yourbackyardapp.com</u>.</string>
    <string name="contact_admin_user">Your account is suspended by the Admin. You can contact the admin at <u>info@yourbackyardapp.com</u>.</string>
    <string name="LIST_YOUR_PLACE_ADD_AMENITIES">Set amenities of your space</string>
    <string name="Skip"><![CDATA[SKIP>>]]></string>
    <string name="no_amenities_for_this_category">No Amenities for this category.</string>
    <string name="enable_location">ENABLE LOCATION</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="blocked_user">Blocked User</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="faq">FAQ</string>
    <string name="send_us_feedback">Send Us Feedback</string>
    <string name="tell_a_friend">Tell a Friend</string>
    <string name="raise_dispute">Raise Dispute</string>
    <string name="logout">LOGOUT</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="sign_here">SIGN HERE</string>
    <string name="report">Report</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_language">Change Language</string>
</resources>