<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical">

    <include layout="@layout/toolbar_second" />


    <customviews.RegularTextView
        android:id="@+id/tv_sign_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/lorem_ipsum_desc"
        android:textColor="@color/black_color" />

    <!--<RelativeLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:clickable="true"-->
        <!--android:focusable="true"-->
        <!--android:layout_weight="1">-->

        <android.gesture.GestureOverlayView
            android:id="@+id/gesture_signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clickable="false"
            android:eventsInterceptionEnabled="true"
            android:layout_weight="1"
            android:fadeEnabled="false"
            android:fadeOffset="10000000"
            android:gestureColor="@color/black_color"
            android:gestureStrokeLengthThreshold="0.1"
            android:gestureStrokeType="multiple"
            android:longClickable="false"
            android:orientation="vertical"
            android:splitMotionEvents="true"
            android:uncertainGestureColor="#000000">

            <customviews.RegularTextView
                android:id="@+id/tv_sign_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:layout_gravity="center"
                android:text="@string/sign_here"
                android:textColor="@color/hint_color_light" />


        </android.gesture.GestureOverlayView>



    <!--</RelativeLayout>-->

    <customviews.SemiboldTextView
        android:id="@+id/tv_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_ripple"
        android:gravity="center"
        android:text="@string/report"
        android:textAllCaps="true"
        android:textColor="@color/white_color" />

    <customviews.SemiboldTextView
        android:id="@+id/tv_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_ripple"
        android:gravity="center"
        android:text="@string/done"
        android:textAllCaps="true"
        android:textColor="@color/white_color" />

</LinearLayout>
