<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/grey_round_pers_inter"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_logo_su" />

            <customviews.BoldTextView
                android:id="@+id/txt_where"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/where_are_you"
                android:textAllCaps="true"
                android:textColor="@color/black_color" />

            <customviews.SemiboldTextView
                android:id="@+id/txt_your_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/location_msg"
                android:textColor="@color/hint_color_dark" />

        </LinearLayout>

        <customviews.SemiboldTextView
            android:id="@+id/txt_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/gradient_ripple"
            android:text="@string/enable_location"
            android:textColor="@color/white_color" />

    </LinearLayout>
</LinearLayout>