<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical"
    tools:context="com.app.backyard.AmenitiesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_base"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <customviews.RegularTextView
            android:id="@+id/tv_amenties_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="100"
            android:text="@string/LIST_YOUR_PLACE_ADD_AMENITIES"
            android:textColor="@color/white_color_light" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/lv_amenities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:listSelector="@null" />

        <customviews.SemiboldTextView
            android:id="@+id/txt_no_amenities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/no_amenities_for_this_category"
            android:textColor="@color/black_color"
            android:visibility="gone" />

    </RelativeLayout>

    <customviews.SemiboldTextView
        android:id="@+id/txt_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_default"
        android:elevation="@dimen/_3"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/done"
        android:textColor="@color/white_color" />


</LinearLayout>
